--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <div id="treeFrame">
         <div id="instruction">
-            点击面板任意位置，演示下一步，或者<a id="finishh" href="#">点击这里</a>一步完成演示。（光标悬停在结点上试试）<a href="more.png" target="_blank">算法原理？</a>
+            点击面板任意位置，演示下一步，或者<a id="finishh" href="#">点击这里</a>一步完成演示。（光标悬停在结点上试试）<a href="more.png" download="more.png" target="_blank">算法原理？</a>
 
         </div>
 
